--- a/flask_dash/dash_file/test1.ipynb
+++ b/flask_dash/dash_file/test1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,53 +38,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>YouBike2.0_一壽橋</td>\n",
-       "      <td>文山區</td>\n",
-       "      <td>2023-11-02 16:36:03</td>\n",
-       "      <td>樟新街64號前方</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
+       "      <td>YouBike2.0_中429公園</td>\n",
+       "      <td>2023-12-06 13:57:15</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>敬業三路177巷南側</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>YouBike2.0_一江公園</td>\n",
+       "      <td>YouBike2.0_長春路137巷口</td>\n",
+       "      <td>2023-12-06 13:57:15</td>\n",
        "      <td>中山區</td>\n",
-       "      <td>2023-11-02 16:36:03</td>\n",
-       "      <td>一江街/松江路132巷口(西北側)</td>\n",
-       "      <td>22</td>\n",
-       "      <td>6</td>\n",
+       "      <td>民生東路二段134號前</td>\n",
        "      <td>16</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>YouBike2.0_三張犁</td>\n",
-       "      <td>信義區</td>\n",
-       "      <td>2023-11-02 16:36:03</td>\n",
-       "      <td>光復南路455號前方</td>\n",
-       "      <td>40</td>\n",
-       "      <td>7</td>\n",
-       "      <td>33</td>\n",
+       "      <td>YouBike2.0_松江民生路口</td>\n",
+       "      <td>2023-12-06 13:57:15</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>松江路208號前</td>\n",
+       "      <td>17</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>YouBike2.0_三民公園</td>\n",
-       "      <td>松山區</td>\n",
-       "      <td>2023-11-02 16:36:03</td>\n",
-       "      <td>撫遠街298號對側公園</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
+       "      <td>YouBike2.0_松江路132巷口</td>\n",
+       "      <td>2023-12-06 13:57:15</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>吉林路100號對側</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>YouBike2.0_三民公園(塔悠路)</td>\n",
-       "      <td>松山區</td>\n",
-       "      <td>2023-11-02 16:36:03</td>\n",
-       "      <td>塔悠路/撫遠街261巷(西側)</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>19</td>\n",
+       "      <td>YouBike2.0_長春吉林路口</td>\n",
+       "      <td>2023-12-06 13:57:15</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>長春路120號前</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -97,101 +97,93 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1318</th>\n",
-       "      <td>YouBike2.0_龍興里活動中心</td>\n",
-       "      <td>中正區</td>\n",
-       "      <td>2023-11-02 16:36:03</td>\n",
-       "      <td>三元街131號旁</td>\n",
-       "      <td>21</td>\n",
-       "      <td>3</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1319</th>\n",
-       "      <td>YouBike2.0_龍門廣場</td>\n",
-       "      <td>大安區</td>\n",
-       "      <td>2023-11-02 16:36:03</td>\n",
-       "      <td>敦化南路一段與敦化南路一段236巷口</td>\n",
-       "      <td>50</td>\n",
-       "      <td>13</td>\n",
-       "      <td>37</td>\n",
+       "      <td>YouBike2.0_南京龍江路口</td>\n",
+       "      <td>2023-12-06 14:06:16</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>南京東路三段121號前</td>\n",
+       "      <td>15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1320</th>\n",
-       "      <td>2.0_一壽橋</td>\n",
-       "      <td>2023-11-02 16:36:03</td>\n",
-       "      <td>文山區</td>\n",
-       "      <td>樟新街64號前方</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
+       "      <td>YouBike2.0_撫順街41巷(崇德宮前)</td>\n",
+       "      <td>2023-12-06 14:06:16</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>撫順街41巷1-7號對側</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1321</th>\n",
-       "      <td>YouBike2.0_三民國小(撫遠街)</td>\n",
-       "      <td>2023-11-10 16:23:15</td>\n",
-       "      <td>松山區</td>\n",
-       "      <td>撫遠街390巷27號對側</td>\n",
+       "      <td>YouBike2.0_臺北市立圖書館大直分館</td>\n",
+       "      <td>2023-12-06 14:06:16</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>大直街28號對側</td>\n",
        "      <td>20</td>\n",
-       "      <td>4</td>\n",
-       "      <td>16</td>\n",
+       "      <td>7</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1322</th>\n",
-       "      <td>YouBike2.0_大龍市場</td>\n",
-       "      <td>2023-11-16 09:33:15</td>\n",
-       "      <td>大同區</td>\n",
-       "      <td>重慶北路三段335巷13號對面</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15</td>\n",
+       "      <td>YouBike2.0_捷運大直站(1號出口)</td>\n",
+       "      <td>2023-12-06 14:06:16</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>北安路535之2號旁</td>\n",
+       "      <td>27</td>\n",
+       "      <td>18</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1323</th>\n",
+       "      <td>YouBike2.0_捷運松江南京站(4號出口)</td>\n",
+       "      <td>2023-12-06 14:06:16</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>松江路95-1至109號前方</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1323 rows × 7 columns</p>\n",
+       "<p>1324 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      站點名稱                 更新時間                  行政區  \\\n",
-       "0           YouBike2.0_一壽橋                  文山區  2023-11-02 16:36:03   \n",
-       "1          YouBike2.0_一江公園                  中山區  2023-11-02 16:36:03   \n",
-       "2           YouBike2.0_三張犁                  信義區  2023-11-02 16:36:03   \n",
-       "3          YouBike2.0_三民公園                  松山區  2023-11-02 16:36:03   \n",
-       "4     YouBike2.0_三民公園(塔悠路)                  松山區  2023-11-02 16:36:03   \n",
-       "...                    ...                  ...                  ...   \n",
-       "1318    YouBike2.0_龍興里活動中心                  中正區  2023-11-02 16:36:03   \n",
-       "1319       YouBike2.0_龍門廣場                  大安區  2023-11-02 16:36:03   \n",
-       "1320               2.0_一壽橋  2023-11-02 16:36:03                  文山區   \n",
-       "1321  YouBike2.0_三民國小(撫遠街)  2023-11-10 16:23:15                  松山區   \n",
-       "1322       YouBike2.0_大龍市場  2023-11-16 09:33:15                  大同區   \n",
+       "                          站點名稱                 更新時間  行政區              地址  總數  \\\n",
+       "0            YouBike2.0_中429公園  2023-12-06 13:57:15  中山區      敬業三路177巷南側  15   \n",
+       "1          YouBike2.0_長春路137巷口  2023-12-06 13:57:15  中山區     民生東路二段134號前  16   \n",
+       "2            YouBike2.0_松江民生路口  2023-12-06 13:57:15  中山區        松江路208號前  17   \n",
+       "3          YouBike2.0_松江路132巷口  2023-12-06 13:57:15  中山區       吉林路100號對側  14   \n",
+       "4            YouBike2.0_長春吉林路口  2023-12-06 13:57:15  中山區        長春路120號前  10   \n",
+       "...                        ...                  ...  ...             ...  ..   \n",
+       "1319         YouBike2.0_南京龍江路口  2023-12-06 14:06:16  中山區     南京東路三段121號前  15   \n",
+       "1320   YouBike2.0_撫順街41巷(崇德宮前)  2023-12-06 14:06:16  中山區    撫順街41巷1-7號對側  19   \n",
+       "1321    YouBike2.0_臺北市立圖書館大直分館  2023-12-06 14:06:16  中山區        大直街28號對側  20   \n",
+       "1322    YouBike2.0_捷運大直站(1號出口)  2023-12-06 14:06:16  中山區      北安路535之2號旁  27   \n",
+       "1323  YouBike2.0_捷運松江南京站(4號出口)  2023-12-06 14:06:16  中山區  松江路95-1至109號前方  32   \n",
        "\n",
-       "                      地址   總數  可借  可還  \n",
-       "0               樟新街64號前方   16   0  16  \n",
-       "1      一江街/松江路132巷口(西北側)   22   6  16  \n",
-       "2             光復南路455號前方   40   7  33  \n",
-       "3            撫遠街298號對側公園   22   1  20  \n",
-       "4        塔悠路/撫遠街261巷(西側)   20   1  19  \n",
-       "...                  ...  ...  ..  ..  \n",
-       "1318            三元街131號旁   21   3  18  \n",
-       "1319  敦化南路一段與敦化南路一段236巷口   50  13  37  \n",
-       "1320            樟新街64號前方  100   0  16  \n",
-       "1321        撫遠街390巷27號對側   20   4  16  \n",
-       "1322     重慶北路三段335巷13號對面   15   0  15  \n",
+       "      可借  可還  \n",
+       "0      2  13  \n",
+       "1      4  12  \n",
+       "2      5  12  \n",
+       "3      8   6  \n",
+       "4      2   8  \n",
+       "...   ..  ..  \n",
+       "1319   9   6  \n",
+       "1320   4  15  \n",
+       "1321   7  13  \n",
+       "1322  18   9  \n",
+       "1323   2  30  \n",
        "\n",
-       "[1323 rows x 7 columns]"
+       "[1324 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Bad pipe message: %s [b'eep-alive\\r\\nUpgrade-Insecure-Req', b'sts: 1\\r\\nSec-Fetch-Mode: navigate\\r\\nAccept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8\\r\\nUser-Agen', b' Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/17.1 Safari/605.1']\n",
-      "Bad pipe message: %s [b'eep-alive\\r\\nUpgrade-Insecure-Req', b'sts: 1\\r\\nSec-Fetch-Mode: navigate\\r\\nAccept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8\\r\\nUser-Agen', b' Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/17.1 Safari/605.1']\n"
-     ]
     }
    ],
    "source": [
@@ -202,11 +194,223 @@
     "lastest_df = pd.DataFrame(lastest_data,columns=['站點名稱','更新時間','行政區','地址','總數','可借','可還'])\n",
     "lastest_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lastest_df1 = lastest_df.reset_index()\n",
+    "lastest_df1['站點名稱'] = lastest_df1['站點名稱'].map(lambda name:name[11:])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>站點名稱</th>\n",
+       "      <th>更新時間</th>\n",
+       "      <th>行政區</th>\n",
+       "      <th>地址</th>\n",
+       "      <th>總數</th>\n",
+       "      <th>可借</th>\n",
+       "      <th>可還</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>中429公園</td>\n",
+       "      <td>2023-12-06 13:57:15</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>敬業三路177巷南側</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>長春路137巷口</td>\n",
+       "      <td>2023-12-06 13:57:15</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>民生東路二段134號前</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>松江民生路口</td>\n",
+       "      <td>2023-12-06 13:57:15</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>松江路208號前</td>\n",
+       "      <td>17</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>松江路132巷口</td>\n",
+       "      <td>2023-12-06 13:57:15</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>吉林路100號對側</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>長春吉林路口</td>\n",
+       "      <td>2023-12-06 13:57:15</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>長春路120號前</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1319</th>\n",
+       "      <td>1319</td>\n",
+       "      <td>南京龍江路口</td>\n",
+       "      <td>2023-12-06 14:06:16</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>南京東路三段121號前</td>\n",
+       "      <td>15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1320</th>\n",
+       "      <td>1320</td>\n",
+       "      <td>撫順街41巷(崇德宮前)</td>\n",
+       "      <td>2023-12-06 14:06:16</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>撫順街41巷1-7號對側</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1321</th>\n",
+       "      <td>1321</td>\n",
+       "      <td>臺北市立圖書館大直分館</td>\n",
+       "      <td>2023-12-06 14:06:16</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>大直街28號對側</td>\n",
+       "      <td>20</td>\n",
+       "      <td>7</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1322</th>\n",
+       "      <td>1322</td>\n",
+       "      <td>捷運大直站(1號出口)</td>\n",
+       "      <td>2023-12-06 14:06:16</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>北安路535之2號旁</td>\n",
+       "      <td>27</td>\n",
+       "      <td>18</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1323</th>\n",
+       "      <td>1323</td>\n",
+       "      <td>捷運松江南京站(4號出口)</td>\n",
+       "      <td>2023-12-06 14:06:16</td>\n",
+       "      <td>中山區</td>\n",
+       "      <td>松江路95-1至109號前方</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1324 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      index           站點名稱                 更新時間  行政區              地址  總數  可借  \\\n",
+       "0         0         中429公園  2023-12-06 13:57:15  中山區      敬業三路177巷南側  15   2   \n",
+       "1         1       長春路137巷口  2023-12-06 13:57:15  中山區     民生東路二段134號前  16   4   \n",
+       "2         2         松江民生路口  2023-12-06 13:57:15  中山區        松江路208號前  17   5   \n",
+       "3         3       松江路132巷口  2023-12-06 13:57:15  中山區       吉林路100號對側  14   8   \n",
+       "4         4         長春吉林路口  2023-12-06 13:57:15  中山區        長春路120號前  10   2   \n",
+       "...     ...            ...                  ...  ...             ...  ..  ..   \n",
+       "1319   1319         南京龍江路口  2023-12-06 14:06:16  中山區     南京東路三段121號前  15   9   \n",
+       "1320   1320   撫順街41巷(崇德宮前)  2023-12-06 14:06:16  中山區    撫順街41巷1-7號對側  19   4   \n",
+       "1321   1321    臺北市立圖書館大直分館  2023-12-06 14:06:16  中山區        大直街28號對側  20   7   \n",
+       "1322   1322    捷運大直站(1號出口)  2023-12-06 14:06:16  中山區      北安路535之2號旁  27  18   \n",
+       "1323   1323  捷運松江南京站(4號出口)  2023-12-06 14:06:16  中山區  松江路95-1至109號前方  32   2   \n",
+       "\n",
+       "      可還  \n",
+       "0     13  \n",
+       "1     12  \n",
+       "2     12  \n",
+       "3      6  \n",
+       "4      8  \n",
+       "...   ..  \n",
+       "1319   6  \n",
+       "1320  15  \n",
+       "1321  13  \n",
+       "1322   9  \n",
+       "1323  30  \n",
+       "\n",
+       "[1324 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lastest_df1"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
